<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.meizu.xjsd</groupId>
    <artifactId>open-mqtt</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>open-mqtt</name>
    <url>http://maven.apache.org</url>
    <modules>
        <module>mqtt-logic</module>
        <module>mqtt-auth</module>
        <module>mqtt-store-memory</module>
        <module>mqtt-store-ignite</module>
        <module>mqtt-broker-vertx</module>
        <module>mqtt-starter</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven-compile-plugin.version>3.11.0</maven-compile-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version> <!-- 使用最新稳定版本 -->
                <configuration>
                    <source>21</source>      <!-- 源代码兼容版本 -->
                    <target>21</target>      <!-- 生成的字节码版本 -->
                    <release>21</release>    <!-- 替代source/target，自动配置运行时 -->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
